chore(ci): require boxes CI to succeed (#3983)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1272,6 +1272,9 @@ workflows:
             - e2e-browser
             - e2e-card-game
             - pxe
+            - boxes-blank
+            - boxes-blank-react
+            - boxes-token
             - cli-docs-sandbox
             - guides-writing-an-account-contract
             - guides-dapp-testing
