--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -70,6 +70,11 @@ jobs:
           name: noirc_abi_wasm
           path: ./tooling/noirc_abi_wasm
 
+      - name: Install wasm-opt
+        uses: taiki-e/install-action@v2
+        with:
+          tool: wasm-opt@version_105
+
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
 
