--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -70,10 +70,10 @@ jobs:
           name: noirc_abi_wasm
           path: ./tooling/noirc_abi_wasm
 
-      - name: Install wasm-opt
+      - name: Install wasm-pack
         uses: taiki-e/install-action@v2
         with:
-          tool: wasm-opt@version_105
+          tool: wasm-pack@0.12.1
 
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
