--- a/.github/workflows/protocol-circuits-gate-diff.yml
+++ b/.github/workflows/protocol-circuits-gate-diff.yml
@@ -6,7 +6,7 @@ on:
       - master
   pull_request:
     branches-ignore:
-      - release-please--*
+      - "release-please--*"
 
 jobs:
   compare_protocol_circuits_gates:
