--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -8,6 +8,38 @@ COPY . .
 RUN .github/scripts/nargo-build.sh
 
 FROM base as base-js
+# RUN apt update && apt install -y curl && rm -rf /var/lib/apt/lists/* && apt-get clean
+# ENV NODE_VERSION=18.19.0
+# RUN ARCH= && \
+#     dpkgArch="$(dpkg --print-architecture)" && \
+#     case "${dpkgArch##*-}" in \
+#         amd64) ARCH='x64';; \
+#         arm64) ARCH='arm64';; \
+#         *) echo "unsupported architecture"; exit 1 ;; \
+#     esac && \
+#     curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH.tar.gz" && \
+#     tar zxf "node-v$NODE_VERSION-linux-$ARCH.tar.gz" -C /usr --strip-components=1 --no-same-owner \
+#     --exclude "*/share/*" \
+#     --exclude "*/bin/corepack" \
+#     --exclude "*/bin/npx" \
+#     --exclude "*/bin/npm" \
+#     --exclude "*/corepack/*" \
+#     --exclude "*/npm/man/*" \
+#     --exclude "*/npm/docs/*" \
+#     --exclude "*/include/*" && \
+#     rm "node-v$NODE_VERSION-linux-$ARCH.tar.gz" && \
+#     node --version
+# # Yarn is used for unboxing.
+# ENV YARN_VERSION=1.22.19 
+# RUN curl -fsSLO --compressed "https://yarnpkg.com/downloads/$YARN_VERSION/yarn-v$YARN_VERSION.tar.gz" && \
+#     mkdir -p /opt && \
+#     tar -xzf yarn-v$YARN_VERSION.tar.gz -C /opt/ && \
+#     ln -s /opt/yarn-v$YARN_VERSION/bin/yarn /usr/local/bin/yarn && \
+#     ln -s /opt/yarn-v$YARN_VERSION/bin/yarnpkg /usr/local/bin/yarnpkg && \
+#     rm yarn-v$YARN_VERSION.tar.gz && \
+#     yarn --version
+
+# ENV PATH="${PATH}:/usr/local/bin"
 RUN apt-get install -y ca-certificates curl gnupg
 RUN mkdir -p /etc/apt/keyrings
 RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
