--- a/yarn-project/archiver/package.json
+++ b/yarn-project/archiver/package.json
@@ -31,7 +31,8 @@
       "^(\\.{1,2}/.*)\\.[cm]?js$": "$1"
     },
     "testRegex": "./src/.*\\.test\\.(js|mjs|ts)$",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "workerThreads": true
   },
   "dependencies": {
     "@aztec/circuit-types": "workspace:^",
