--- a/.github/workflows/docs-pr.yml
+++ b/.github/workflows/docs-pr.yml
@@ -47,12 +47,8 @@ jobs:
             })
           }
 
-  build_and_deploy_preview:
+  build_preview:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    needs: add_label
-    if: needs.add_label.outputs.has_label == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -78,6 +74,30 @@ jobs:
         run: 
           yarn workspaces foreach -Rt run build
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: ./docs/build/
+          retention-days: 3
+
+
+  deploy_preview:
+    needs: [build_preview, add_label]
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+    if: needs.add_label.outputs.has_label == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+    
+      - name: Download built docs
+        uses: actions/download-artifact@v3
+        with:
+          name: docs
+          path: ./docs/build
+     
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.1
         with:
