--- a/.github/workflows/docs-pr.yml
+++ b/.github/workflows/docs-pr.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Build docs
         run: 
-          yarn workspaces foreach -Rt run build
+          yarn workspaces foreach -Rpt --from docs run build
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
