--- a/.github/workflows/docs-pr.yml
+++ b/.github/workflows/docs-pr.yml
@@ -24,7 +24,8 @@ jobs:
           const { data: files } = await github.pulls.listFiles({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            pull_number: context.issue.number
+            pull_number: context.issue.number,
+            per_page: 100
           });
 
           // Check if any file is within the 'docs' folder
