--- a/yarn-project/noir-protocol-circuits/tsconfig.json
+++ b/yarn-project/noir-protocol-circuits/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "../noir-compiler"
     },
     {
+      "path": "../types"
+    },
+    {
       "path": "../circuit-types"
     },
     {
