--- a/yarn-project/noir-compiler/package.json
+++ b/yarn-project/noir-compiler/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@aztec/circuits.js": "workspace:^",
     "@aztec/foundation": "workspace:^",
+    "@aztec/types": "workspace:^",
     "@iarna/toml": "^2.2.5",
     "@noir-lang/noir_wasm": "portal:../../noir/packages/noir_wasm",
     "base64-js": "^1.5.1",
