chore: Remove unused noir-version json (#4105)
Given we're now releasing aztec nargo from the monorepo with the same
versioning as the other packages, `noir-version.json` is no longer
needed.

As part of this changeset, removes all references to noir versions from
the docs (last ones were around installing nargo just for LSP, which are
being removed
[here](https://github.com/AztecProtocol/aztec-packages/pull/4110/)),
removes the exported noir-version from noir-compiler, and removes the
`compatibleNargoVersion` from node-info since it's no longer used. And
besides, we were returning the string
`portal:../../noir/packages/noir_wasm` as `compatibleNargoVersion` from
the pxe :facepalm:.

--- a/yarn-project/noir-compiler/package.json
+++ b/yarn-project/noir-compiler/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "exports": {
     ".": "./dest/index.js",
-    "./cli": "./dest/cli/index.js",
-    "./versions": "./dest/versions.js"
+    "./cli": "./dest/cli/index.js"
   },
   "typedocOptions": {
     "entryPoints": [
@@ -49,7 +48,6 @@
     "@aztec/foundation": "workspace:^",
     "@aztec/types": "workspace:^",
     "@iarna/toml": "^2.2.5",
-    "@noir-lang/noir_wasm": "portal:../../noir/packages/noir_wasm",
     "base64-js": "^1.5.1",
     "commander": "^9.0.0",
     "fs-extra": "^11.1.1",
