refactor: archiver store (#3966)
This PR refactors the archiver store to use `@aztec/kv-store` instead of
lmdb directly. It is stacked on top of #4028.

The diff looks massive but all it does is split the archiver store into
individual pieces to better separate them conceptually (blocks, logs,
contracts, messages) and replace direct uses of lmdb with the data
structures from kv-store.

--- a/yarn-project/end-to-end/package.json
+++ b/yarn-project/end-to-end/package.json
@@ -32,6 +32,7 @@
     "@aztec/cli": "workspace:^",
     "@aztec/ethereum": "workspace:^",
     "@aztec/foundation": "workspace:^",
+    "@aztec/kv-store": "workspace:^",
     "@aztec/l1-artifacts": "workspace:^",
     "@aztec/merkle-tree": "workspace:^",
     "@aztec/noir-contracts": "workspace:^",
@@ -57,7 +58,6 @@
     "koa": "^2.14.2",
     "koa-static": "^5.0.0",
     "levelup": "^5.1.1",
-    "lmdb": "^2.9.1",
     "lodash.compact": "^3.0.1",
     "lodash.every": "^4.6.0",
     "memdown": "^6.1.1",
