--- a/yarn-project/archiver/package.json
+++ b/yarn-project/archiver/package.json
@@ -39,6 +39,7 @@
     "@aztec/circuits.js": "workspace:^",
     "@aztec/ethereum": "workspace:^",
     "@aztec/foundation": "workspace:^",
+    "@aztec/kv-store": "workspace:^",
     "@aztec/l1-artifacts": "workspace:^",
     "@types/lodash.omit": "^4.5.7",
     "debug": "^4.3.4",
