--- a/.github/workflows/docs-pr.yml
+++ b/.github/workflows/docs-pr.yml
@@ -40,7 +40,7 @@ jobs:
         script: |
           const labels = context.payload.pull_request.labels.map(label => label.name);
           if (!labels.includes('documentation')) {
-            github.issues.addLabels({
+            github.rest.issues.addLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
