--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -29,8 +29,7 @@
     "url": "https://github.com/noir-lang/noir/issues"
   },
   "scripts": {
-    "install:wasm_pack": "./scripts/install_wasm-pack.sh",
-    "build": "yarn install:wasm_pack && WASM_OPT=$(./scripts/command-check.sh wasm-opt) webpack",
+    "build": "WASM_OPT=$(./scripts/command-check.sh wasm-opt) webpack",
     "test": "yarn test:build_fixtures && yarn test:node && yarn test:browser",
     "test:build_fixtures": "./scripts/build-fixtures.sh",
     "test:browser": "web-test-runner",
