--- a/yarn-project/archiver/package.json
+++ b/yarn-project/archiver/package.json
@@ -41,7 +41,7 @@
     "@aztec/foundation": "workspace:^",
     "@aztec/kv-store": "workspace:^",
     "@aztec/l1-artifacts": "workspace:^",
-    "@types/lodash.omit": "^4.5.7",
+    "@aztec/types": "workspace:^",
     "debug": "^4.3.4",
     "lmdb": "^2.9.1",
     "lodash.omit": "^4.5.0",
@@ -54,6 +54,7 @@
     "@jest/globals": "^29.5.0",
     "@types/debug": "^4.1.7",
     "@types/jest": "^29.5.0",
+    "@types/lodash.omit": "^4.5.7",
     "@types/node": "^18.15.11",
     "@types/ws": "^8.5.4",
     "concurrently": "^8.0.1",
