feat: Produce graph of internal Barretenberg dependencies (#4225)
The graph is directed, with $A\to B$ meaning that $A$ depends on $B$.
Result:

![barretenberg_modules](https://github.com/AztecProtocol/aztec-packages/assets/26756572/5bc0745a-1b14-431f-9059-16e4b6b4a217)
A follow on could rewrite the CMakeLists.txt files to actually make use
of this minimal representation of dependencies, but that feels
unnecessary at the moment.

--- a/barretenberg/cpp/.gitignore
+++ b/barretenberg/cpp/.gitignore
@@ -9,3 +9,5 @@ CMakeUserPresets.json
 acir_tests
 # we may download go in scripts/collect_heap_information.sh
 go*.tar.gz
+barretenberg_modules.dot
+barretenberg_modules.png
