--- a/compiler/noirc_errors/Cargo.toml
+++ b/compiler/noirc_errors/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 acvm.workspace = true
 codespan-reporting.workspace = true
 codespan.workspace = true
-fm.workspace = true
+# fm.workspace = true
 chumsky.workspace = true
 serde.workspace = true
 serde_with = "3.2.0"
