--- a/tooling/nargo_fmt/Cargo.toml
+++ b/tooling/nargo_fmt/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 
 [dependencies]
 bytecount = "0.6.3"
+codespan.workspace = true
 noirc_frontend.workspace = true
 serde.workspace = true
 toml.workspace = true
