--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
+    "@types/deep-equal-in-any-order": "^1.0.3",
     "chai": "^4.3.7",
     "cspell": "^8.3.2",
+    "deep-equal-in-any-order": "^2.0.6",
     "eslint": "^8.50.0",
     "eslint-plugin-prettier": "^5.0.0",
     "mocha": "^10.2.0",
