feat(bb): wasmtime and remote benchmarking (#4204)
- provides a script that runs threaded goblin_bench in WASM with 16
cores
- point to https://github.com/AztecProtocol/google-benchmark with
changes for our custom WASI environment. This included removing CMake's
thread library heuristics (which were unneeded, anyway) and adding
checks for a wasm environment when measuring time. See
https://github.com/AztecProtocol/barretenberg/issues/837 for followups.
- remove conditional BENCHMARKS in CMakeLists.txt. There's no reason to
conditionally provide benchmark targets now that WASM can process the
google benchmark cmake
- add some WASMTIME_ENV_HACK guards around fake SRS and a fixed core
count.
- helpers for running benchmarks on remote nodes

---------

Co-authored-by: ludamad <adam@aztecprotocol.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -153,5 +153,8 @@
   "C_Cpp.default.enableConfigurationSquiggles": false,
   "C_Cpp.formatting": "disabled",
   "C_Cpp.vcpkg.enabled": false,
-  "C_Cpp.default.includePath": ["barretenberg/cpp/src"],
+  "C_Cpp.default.includePath": [
+    "barretenberg/cpp/src"
+  ],
+  "cmake.sourceDirectory": "/mnt/user-data/adam/aztec-packages/barretenberg/cpp",
 }
