feat!: Include contract class id in deployment info (#4223)
**Breaking changes:**
- Aztec.js `Contract` object and generated ts wrappers now hold a
`ContractInstance` instead of a `CompleteAddress`.
- Updated `addContract` CLI command to require initHash and salt instead
of partialAddress, needed to generate the ContractInstance

**Other changes:**
- Updated contract deployment data, contract deployment event, new
contract data, and other structs to include the contract class id.
- `ContractDao` now holds a `ContractInstance` reference instead of a
`CompleteAddress`.
- Moved functions to compute address to a separate module within
circuits.js.
- Killed `DeploymentInfo` struct in favor of `ContractInstance`
- Updated types in `noir-protocol-circuit` to handle new structures for
new contract data, and updated address computation.

**Comments**
- CompleteAddress still around, meant to let a user receive funds
without registering themselves, and has public key in plain.
- Unclear whether to store initiHash+salt+portal or just saltedInitHash
in instances in the node.
- Unclear if portal should be part of saltedInitHash also.

Fixes #4054

--- a/yarn-project/circuits.js/package.json
+++ b/yarn-project/circuits.js/package.json
@@ -9,7 +9,8 @@
     "./factories": "./dest/tests/factories.js",
     "./utils": "./dest/utils/index.js",
     "./types": "./dest/types/index.js",
-    "./constants": "./dest/constants.gen.js"
+    "./constants": "./dest/constants.gen.js",
+    "./contract": "./dest/contract/index.js"
   },
   "typedocOptions": {
     "entryPoints": [
