--- a/yarn-project/package.json
+++ b/yarn-project/package.json
@@ -10,7 +10,7 @@
     "formatting:fix": "./run_nargo_fmt.sh && FORCE_COLOR=true yarn workspaces foreach -p -v run formatting:fix",
     "lint": "yarn eslint --cache --ignore-pattern l1-artifacts .",
     "format": "yarn prettier --cache -w .",
-    "test": "FORCE_COLOR=true yarn workspaces foreach --exclude @aztec/aztec3-packages --exclude @aztec/end-to-end --exclude private-token -p -j unlimited -v run test",
+    "test": "FORCE_COLOR=true yarn workspaces foreach --exclude @aztec/aztec3-packages --exclude @aztec/end-to-end --exclude private-token -p -j ${JOBS:-unlimited} -v run test",
     "build": "yarn workspace @aztec/l1-artifacts build && tsc -b tsconfig.json",
     "build:dev": "yarn workspace @aztec/l1-artifacts build && tsc -b tsconfig.json --watch",
     "clean": "yarn workspaces foreach -p -v run clean"
