--- a/barretenberg/cpp/src/barretenberg/benchmark/goblin_bench/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/benchmark/goblin_bench/CMakeLists.txt
@@ -1,1 +1,1 @@
-barretenberg_module(goblin_bench ultra_honk eccvm stdlib_recursion)
+barretenberg_module(goblin_bench ultra_honk eccvm stdlib_recursion stdlib_sha256 stdlib_merkle_tree stdlib_primitives)
