--- a/l1-contracts/Dockerfile
+++ b/l1-contracts/Dockerfile
@@ -1,6 +1,6 @@
 # Building requires foundry.
 FROM ghcr.io/foundry-rs/foundry:nightly-4a643801d0b3855934cdec778e33e79c79971783
-RUN apk update && apk add git jq bash nodejs npm yarn python3 py3-pip && pip3 install slither-analyzer
+RUN apk update && apk add git jq bash nodejs npm yarn python3 py3-pip && pip3 install slither-analyzer slitherin
 WORKDIR /usr/src/l1-contracts
 COPY . .
 RUN git init
