feat(avm-transpiler): Brillig to AVM transpiler (#4227)
Resolves #4270 

1. Transpiler module
2. Docker & CI for transpiler module
3. Auto-transpile contracts starting with `avm_test_*`
4. AVM test contract for transpilation & simulation
5. AVM Simulator test with transpiled contract
6. Small fix in TS TaggedMemory

---------

Co-authored-by: Maddiaa <47148561+Maddiaa0@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,17 @@ jobs:
           name: "Build"
           command: cond_spot_run_build noir-compile-acir-tests 32
 
+  avm-transpiler:
+    docker:
+      - image: aztecprotocol/alpine-build-image
+    resource_class: small
+    steps:
+      - *checkout
+      - *setup_env
+      - run:
+          name: "Build"
+          command: cond_spot_run_build avm-transpiler 32
+
   # Barretenberg
   barretenberg-wasm-linux-clang:
     docker:
@@ -1137,6 +1148,9 @@ workflows:
             - noir-ecr-manifest
           <<: *defaults
 
+      # Transpiler
+      - avm-transpiler: *defaults
+
       # Barretenberg
       - barretenberg-x86_64-linux-gcc: *defaults
       - barretenberg-x86_64-linux-clang: *defaults
@@ -1185,6 +1199,7 @@ workflows:
       # Yarn Project
       - yarn-project-base:
           requires:
+            - avm-transpiler
             - l1-contracts
             - bb-js
             - noir-ecr-manifest
