feat: Verify function against contract class id in private kernel (#4337)
Updates the private kernel circuit to verify that the function being
executed belongs to the contract class id in the address preimage.

- Introduces `ContractClassId` as a type in noir-protocol-circuits
- Updates contract class computation to remove public functions root
since they'll be eventually dropped
- Updates `PrivateCallData` input to private kernel to include preimages
for address and contract class
- Introduces `WrappedFieldLike` type for codegen so all wrapped field
types can be converted from fields
- Introduces an immutable simple `MerkleTree` type in circuits.js so we
don't pass raw `Fr[]`s around
- Sets `vk_hash` to zero in ts-land since it's mocked to zero in
noir-land
- Replaces pxe `contract_tree` with a `private_functions_tree`
- Updates noir protocol circuits fixture data and builder
- Introduces `WrappedFieldLike` to encoder to easily pass structs with
just an `inner` field from aztecjs

Pending updating yellow paper with new kernel circuit structs (coming up
in another PR).

Fixes #4056

--- a/yarn-project/circuits.js/package.json
+++ b/yarn-project/circuits.js/package.json
@@ -10,7 +10,8 @@
     "./utils": "./dest/utils/index.js",
     "./types": "./dest/types/index.js",
     "./constants": "./dest/constants.gen.js",
-    "./contract": "./dest/contract/index.js"
+    "./contract": "./dest/contract/index.js",
+    "./merkle": "./dest/merkle/index.js"
   },
   "typedocOptions": {
     "entryPoints": [
